--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,3 +38,32 @@ input[type="submit"]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+.for-table {
+  max-width: 100%;
+  max-height: 100%;
+  scroll-behavior: auto;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  max-width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:nth-child(odd) > td:nth-child(even) {
+  background-color: #a9d1a7;
+}
+tr:nth-child(even) > td:nth-child(odd) {
+  background-color: #d4ebc3;
+}
