--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,70 +3,49 @@
     <h2>Введіть дані:</h2>
 
     <form>
-      <label for="a">a:</label><br />
+      <label for="a">Довжина Ω:</label><br />
       <input
         type="number"
         id="a"
         name="a"
         [(ngModel)]="inputController.a"
       /><br />
-      <label for="b">b:</label><br />
+      <label for="b">Ширина Ω:</label><br />
       <input
         type="number"
         id="b"
         name="b"
         [(ngModel)]="inputController.b"
       /><br />
-      <label for="c">c:</label><br />
+      <label for="c">Ширина Ω<sub>2</sub>:</label><br />
       <input
         type="number"
         id="c"
         name="c"
         [(ngModel)]="inputController.c"
       /><br />
-      <label for="d">d:</label><br />
-      <input
-        type="number"
-        id="d"
-        name="d"
-        [(ngModel)]="inputController.d"
-      /><br />
-      <label for="deltaA">&Delta;a:</label><br />
+      <label for="deltaA">Кільсть розподілів Ω по довжині:</label><br />
       <input
         type="number"
         id="deltaA"
         name="deltaA"
         [(ngModel)]="inputController.deltaA"
       /><br />
-      <label for="deltaB">&Delta;b:</label><br />
+      <label for="deltaB">Кількість розподілів Ω по ширині:</label><br />
       <input
         type="number"
         id="deltaB"
         name="deltaB"
         [(ngModel)]="inputController.deltaB"
       /><br />
-      <label for="deltaC">&Delta;c:</label><br />
-      <input
-        type="number"
-        id="deltaC"
-        name="deltaC"
-        [(ngModel)]="inputController.deltaC"
-      /><br />
-      <label for="deltaD">&Delta;d:</label><br />
-      <input
-        type="number"
-        id="deltaD"
-        name="deltaD"
-        [(ngModel)]="inputController.deltaD"
-      /><br />
-      <label for="F">F:</label><br />
+      <label for="F">Значення функції f(x;y):</label><br />
       <input
         type="number"
         id="F"
         name="F"
         [(ngModel)]="inputController.F"
       /><br />
-      <label for="G">G:</label><br />
+      <label for="G">U<sub>0</sub>:</label><br />
       <input
         type="number"
         id="G"
